--- a/javascript.js/registro rapido y funcional js/views/register.ejs
+++ b/javascript.js/registro rapido y funcional js/views/register.ejs
@@ -9,7 +9,7 @@
     <h1>Registro de ususario</h1>
     <form action="/validar" method="post">
        RUT:
-       <input type="number" name="RUT" id="RUT"><br><br>
+       <input type="number" name="rut" id="rut"><br><br>
 
        nombre:
        <input type="text" name="nombre" id="nombre"><br><br>
