ultimoedit registro en bd de mysql y login con validacion (sencillo fundamental)100% funcional

--- a/javascript.js/registro rapido y funcional js/views/register.ejs
+++ b/javascript.js/registro rapido y funcional js/views/register.ejs
@@ -28,6 +28,8 @@
 
        <input type="submit" value="Registrar">
 
+        <p>ya te haz registrado? - <a href="/login">logueate</a></p>
+
     </form>
 </body>
 </html>
